--- a/play.html
+++ b/play.html
@@ -1,7 +1,8 @@
 <html>
 <body>
-<audio controls="controls">
-  <source src="https://oshwhub.com/attachments/2022/3/E2EjN0IMyKqgV0XZwW8uMKAzID6sViifzU24xbpL.wav" type="audio/mpeg">
+<p>！音量注意！</p>
+<audio autoplay="autoplay" controls="controls">
+  <source src="https://oshwhub.com/attachments/2022/3/E2EjN0IMyKqgV0XZwW8uMKAzID6sViifzU24xbpL.wav" type="">
 </audio>
 </body>
 </html>
